осталось доработать тесты, добавить новые